tests/spec/emit/snapshots/try_block_panic_tail_result_context.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<int, string> {
    try {
      let _ = Ok(1)?;
      panic("fatal")
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[int, string] {
	check_1 := lisette.MakeResultOk[int, string](1)
	if check_1.Tag != lisette.ResultOk {
		return check_1
	}
	panic("fatal")
}
