tests/spec/emit/snapshots/try_block_result_temp_var_no_collision.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn foo() -> Result<int, string> {
    let result = try {
      Ok(1)?
    }
    let tryResult_1 = 7
    let _ = tryResult_1
    Ok(0)
  }
  
  fn main() {
    let _ = foo()
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func foo() lisette.Result[int, string] {
	tryResult_1 := func() lisette.Result[int, any] {
		check_2 := lisette.MakeResultOk[int, any](1)
		if check_2.Tag != lisette.ResultOk {
			return check_2
		}
		return lisette.MakeResultOk[int, any](check_2.OkVal)
	}()
	_ = tryResult_1
	return lisette.MakeResultOk[int, string](0)
}

func main() {
	_ = foo()
}
