tests/spec/emit/snapshots/try_block_trailing_assignment.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<(), string> {
    let mut x = 0
    let r = try {
      let _ = Ok(1)?
      x = 1
    }
    let _ = x
    r
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[struct{}, string] {
	x := 0
	r := func() lisette.Result[struct{}, string] {
		check := lisette.MakeResultOk[int, string](1)
		if check.Tag != lisette.ResultOk {
			return lisette.MakeResultErr[struct{}, string](check.ErrVal)
		}
		x = 1
		return lisette.MakeResultOk[struct{}, string](struct{}{})
	}()
	_ = x
	return r
}
