tests/spec/emit/snapshots/try_block_trailing_unit_call.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn noop() {}
  
  fn f() -> Result<(), string> {
    try {
      let _ = Ok(1)?
      noop()
    }
  }
  
  fn test() -> Result<(), string> {
    f()
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func noop() {}

func f() lisette.Result[struct{}, string] {
	check := lisette.MakeResultOk[int, string](1)
	if check.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[struct{}, string](check.ErrVal)
	}
	noop()
	return lisette.MakeResultOk[struct{}, string](struct{}{})
}

func test() lisette.Result[struct{}, string] {
	return f()
}
