tests/spec/emit/snapshots/try_block_user_never_tail_result_context.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn die() -> Never { panic("dead") }
  
  fn test() -> Result<int, string> {
    try {
      let _ = Ok(1)?;
      die()
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func die() {
	panic("dead")
}

func test() lisette.Result[int, string] {
	check := lisette.MakeResultOk[int, string](1)
	if check.Tag != lisette.ResultOk {
		return check
	}
	die()
	panic("unreachable")
}
